fix:加密/登录/token简单实现
