# docs/swagger.yaml
@@ -28,6 +28,14 @@ paths:
         in: query
         name: pass2
         type: string
+      - description: 手机号
+        in: query
+        name: phone
+        type: string
+      - description: 邮箱
+        in: query
+        name: email
+        type: string
       produces:
       - application/json
       responses:
@@ -81,6 +89,16 @@ paths:
         name: pwd
         required: true
         type: string
+      - description: 邮箱
+        in: query
+        name: email
+        required: true
+        type: string
+      - description: 电话号码
+        in: query
+        name: phone
+        required: true
+        type: string
       produces:
       - application/json
       responses: {}
@@ -96,4 +114,26 @@ paths:
             type: json
       tags:
       - GetUserList
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      description: 用户登录
+      parameters:
+      - description: 用户名/邮箱/手机号码
+        in: query
+        name: name
+        required: true
+        type: string
+      - description: 密码
+        in: query
+        name: pass
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: 用户登录
+      tags:
+      - LoginUser
 swagger: "2.0"
